src/test/ui/parser/keyword-while-as-identifier.stderr
error: expected identifier, found keyword `while`
  --> $DIR/keyword-while-as-identifier.rs:4:9
   |
LL |     let while = "foo";
   |         ^^^^^ expected identifier, found keyword
   |
help: escape `while` to use it as an identifier
   |
LL |     let r#while = "foo";
   |         ++

error: aborting due to previous error

